# sc-app

./: .env.development  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  GOTCHAS.md  NOTES.md  README.md  RUNTIME_REFACTOR_NOTES.md  config.json  eslint.config.js  harmonic-questing-lerdorf.md  history.md  index.html  metadata.json  ok-we-don-t-need-cryptic-balloon.md  package.json  plan-2.md  plan.md  sc-debug-20260425-013119.txt  sc-plugin.xsd  scsynth-oscilloscope-plan.md  superdirt.md  tmp.md  tsconfig.json  tsconfig.node.tsbuildinfo  ui-foundation-plan.md  vite.config.ts  vitest.config.ts
crates/scserver-commands/: Cargo.toml  README.md
crates/scserver-commands/examples/node/: commands_smoke.ts  package-lock.json  package.json  roundtrip.ts
crates/scserver-commands/scripts/: generate.mjs
crates/scserver-commands/src/: args.rs  commands.rs  component.rs  component_commands.rs  error.rs  lib.rs  message.rs  nrt.rs  osc.rs  registry.rs  registry_data.rs  replies.rs  reply.rs
crates/scserver-commands/src/assets/commands/: buffer.json  buffer_fill.json  control.json  group.json  master.json  node.json  nrt.json  replies.json  synth.json  synthdef.json  unit.json
crates/scserver-commands/src/builders/: buffer.rs  control.rs  group.rs  master.rs  mod.rs  node.rs  nrt.rs  synth.rs  synthdef.rs  unit.rs
crates/scserver-commands/tests/: integration.rs
crates/scserver-commands/wit/: commands.wit  nrt.wit  replies.wit  scserver.wit
crates/scsynthdef-compiler/: Cargo.toml  README.md
crates/scsynthdef-compiler/assets/ugens/: chaos.json  fft.json  machine_listening.json  misc.json  pan.json
crates/scsynthdef-compiler/examples/: sclang_parity.rs
crates/scsynthdef-compiler/examples/frontend/: index.html  main.js  package-lock.json  package.json  styles.css
crates/scsynthdef-compiler/examples/node/: .gitignore  package-lock.json  package.json  sclang_parity.ts
crates/scsynthdef-compiler/fixtures/global_clock_phase/: spec.json
crates/scsynthdef-compiler/fixtures/sc_test_recorder/: spec.json
crates/scsynthdef-compiler/fixtures/sine/: spec.json
crates/scsynthdef-compiler/scripts/: generate_ugens_component.mjs
crates/scsynthdef-compiler/src/: compile.rs  component.rs  error.rs  lib.rs  operators.rs  rate.rs  registry.rs  synthdef.rs  ugens_component.rs  wasm.rs
crates/scsynthdef-compiler/src/builders/: basicops.rs  beq_suite.rs  buf_io.rs  chaos.rs  compander.rs  delay.rs  demand.rs  envgen.rs  ff_osc.rs  fft.rs  fft2.rs  filter.rs  grain.rs  info.rs  input.rs  io.rs  line.rs  machine_listening.rs  misc.rs  mod.rs  noise.rs  osc.rs  pan.rs  random.rs  trig.rs
crates/scsynthdef-compiler/src/specs/: basicops.rs  buf_io.rs  compander.rs  delay.rs  envgen.rs  ff_osc.rs  grain.rs  info.rs  io.rs  line.rs  machine_listening.rs  misc.rs  mod.rs  noise.rs  osc.rs  random.rs
crates/scsynthdef-compiler/src/ugens/: beq_suite.rs  chaos.rs  demand.rs  fft.rs  fft2.rs  filter.rs  input.rs  mod.rs  pan.rs  trig.rs
crates/scsynthdef-compiler/tests/: parity.rs
crates/scsynthdef-compiler/wit/: scsynthdef.wit
dbg-logs/: recording-bus33-2026-04-25T08-34-11.gaps.json
docs/: architecture.md  history.md  raspberry-pi.md
example-plugin/: index.html  main.js  metadata.json  style.css
examples/bad-bindings/: index.html
examples/conditional-plugin/: index.html
examples/example-plugin/: index.html
examples/fm-synth/: index.html  metadata.json
examples/forward-ref-plugin/: index.html
examples/group-bind-plugin/: index.html
examples/group-plugin/: index.html
examples/midi-plugin/: index.html  metadata.json
examples/nested-groups-plugin/: index.html
examples/noise-filter/: index.html  metadata.json
examples/record-plugin/: index.html  metadata.json
examples/scope-plugin/: index.html  metadata.json
examples/scope-shm-plugin/: index.html  metadata.json
examples/select-plugin/: index.html
examples/sine-inline/: index.html  metadata.json
examples/studio-plugin/: index.html  metadata.json
examples/synthdef-plugin/: index.html
examples/test-plugin/: index.html  metadata.json
scripts/: cleanup.sh  compile_synthdef.scd  compile_synthdefs.sh  dump_synthdef_fixtures.mjs  generate_server_commands_component.mjs  generate_server_commands_rust.mjs  generate_server_commands_wit.mjs  generate_ugen_db.mjs  generate_ugens_rust.mjs  generate_wit.mjs  package_examples.sh  sc-app-scsynth.service  sc-app-superdirt-startup.scd  sc-clock.scd  sc-startup.scd  scrape_server_commands.mjs  setup-superdirt-deps.sh  start-osc.sh  start-scsynth-only.sh  start-scsynth.sh  start-strudeldirt-only.sh  start-superdirt-only.sh  start-superdirt.sh  test_recordbuf.scd
scripts/lib/: clock.scd  (+6 more)
src/: App.css  App.scss  App.tsx  AppShell.tsx  app.css  main.tsx  osc-js.d.ts  strudel.d.ts  styles.scss  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/sc-cli/: Cargo.toml
src-tauri/crates/sc-cli/src/: main.rs
src-tauri/crates/sc-plugin/: Cargo.toml
src-tauri/crates/sc-plugin/src/: cli.rs  lib.rs  plugin_server.rs  validation.rs
src-tauri/crates/sc-plugin/src/xsd/: sc-plugin-schema.xsd
src-tauri/crates/sc-server/: Cargo.toml
src-tauri/crates/sc-server/src/: lib.rs
src-tauri/src/: app_config.rs  cli.rs  clock.rs  config.rs  http_server.rs  lib.rs  logging.rs  main.rs  plugin_manager.rs  scope_shm.rs  udp_server.rs
src-tauri/src/cli/: bridge.rs  gui.rs  mod.rs
src-tauri/src/ipc/: buf_reader.rs  buffer.rs  commands.rs  mod.rs  recording.rs  scope.rs  scope_shm.rs  udp.rs
src-tauri/src/plugin/: cli.rs  manager.rs  mod.rs  router.rs
src-tauri/src/plugin/xsd/: sc-plugin-schema.xsd
src-tauri/src/recording/: manager.rs  mod.rs  router.rs  state.rs
src-tauri/src/scope/: middleware.rs  mod.rs  osc.rs  shm.rs
src-tauri/src/server/: api.rs  buffer_ws.rs  log_ingest.rs  logging.rs  middleware.rs  mod.rs  recording_ws.rs  routing.rs  scope_ws.rs  security.rs  server.rs  session.rs  static_assets.rs  ws_bridge.rs  ws_cleanup.rs  ws_dirt.rs  ws_scope.rs
src-tauri/src/xsd/: sc-plugin-schema.xsd
tests/: setup.ts
(+416 files in other folders)
