[package]
name = "sc-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 0 — CLI + HTTP + WS↔UDP bridge.
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
anyhow = "1"

# Phase 22 — minimal OSC awareness in the bridge for ungraceful-
# disconnect cleanup. Only used to decode `/done /notify` replies
# and encode the cleanup bundle (/g_freeAll, /n_free, /notify 0).
rosc = "0.11"

# Phase 29 — bridge-managed sessions keyed by per-tab UUIDs from
# `sessionStorage`. v4 for random IDs at session creation; serde
# for the JSON shape on /api/session.
uuid = { version = "1", features = ["v4", "serde"] }

# Phase 23 — unified logging pipeline. eprintln! → tracing!,
# daily-rotated file via tracing-appender, frontend log shipping
# via POST /api/logs.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Phase 31 — SHM scope buffer reader. mmap directly into scsynth's
# Boost.Interprocess managed_shared_memory segment to read scope
# buffer slots without OSC round-tripping. Only the libc mmap +
# munmap entry points used; no other libc surface.
libc = "0.2"

# Phase 37 — regex-based routing table. Each route is a
# user-authored regex matched against the OSC address; the bridge
# walks the table top-down, first match wins. Compiled once at
# RoutingTable::build.
regex = "1"

