[package]
name = "scserver-commands"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Typed Rust encoders and parsers for the SuperCollider server command protocol (OSC + NRT score)."
repository = "https://github.com/nicmell/scserver-commands"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rosc = "0.11"
wit-bindgen-rt = { version = "0.44", features = ["bitflags"], optional = true }

[features]
default = []
component = ["dep:wit-bindgen-rt"]

[package.metadata.component]
package = "scserver:commands"

[package.metadata.component.target]
path = "wit"
world = "scserver"
