[package]
name = "sc-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
fastxml = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
