[package]
name = "sc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sc-plugin = { path = "../sc-plugin" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde_json = "1"
